regression-tests/test-results/apple-clang-14/pure2-assert-expected-not-null.cpp.output
pure2-assert-expected-not-null.cpp2:7:10: error: no member named 'expected' in namespace 'std'
    std::expected<int,bool> ex {4}; 
    ~~~~~^
pure2-assert-expected-not-null.cpp2:7:22: error: expected '(' for function-style cast or type construction
    std::expected<int,bool> ex {4}; 
                  ~~~^
pure2-assert-expected-not-null.cpp2:9:165: error: use of undeclared identifier 'ex'
    return *cpp2::assert_not_null(std::move(up)) + *cpp2::assert_not_null(std::move(sp)) + *cpp2::assert_not_null(std::move(op)) + *cpp2::assert_not_null(std::move(ex)); 
                                                                                                                                                                    ^
pure2-assert-expected-not-null.cpp2:14:10: error: no member named 'expected' in namespace 'std'
    std::expected<int,bool> ex {std::unexpected(false)}; 
    ~~~~~^
pure2-assert-expected-not-null.cpp2:14:22: error: expected '(' for function-style cast or type construction
    std::expected<int,bool> ex {std::unexpected(false)}; 
                  ~~~^
pure2-assert-expected-not-null.cpp2:15:45: error: use of undeclared identifier 'ex'
    return *cpp2::assert_not_null(std::move(ex)); 
                                            ^
6 errors generated.
